refactor(test): 优化测试代码并改进意图澄清逻辑
- 将静态导入改为通配符导入以简化代码
- 使用 getFirst() 替代 get(0) 访问列表元素
- 添加 NotNull 注解提高代码可读性
- 提取字符串对象映射为独立方法减少重复代码
- 使用 assertInstanceOf 替代类型检查
- 移除 NetworkOrchestratorProvider 依赖
- 移除 GlobalConstraints 和 HashMap 的未使用导入
- 在 Python 后端添加