@@ -7,6 +7,7 @@ import com.formacraft.common.llm.dto.Layout;
 import com.formacraft.common.llm.dto.LlmPlan;
 import com.formacraft.common.llm.dto.Slot;
 import com.formacraft.common.llm.dto.Vec3i;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Method;
@@ -14,34 +15,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class AssemblyPlanPromoterTest {
 
     @Test
-    void promotesNestedAssemblyAndStripsConflictingComponents() throws Exception {
-        Map<String, Object> assembly = Map.of(
-                "entranceFacing", "SOUTH",
-                "graph", Map.of(
-                        "components", List.of(
-                                Map.of(
-                                        "id", "Core",
-                                        "type", "SHELL_BOX",
-                                        "at", Map.of("x", 0, "y", 0, "z", 0),
-                                        "w", 10, "d", 10, "h", 24,
-                                        "twistTurns", 0.75
-                                )
-                        ),
-                        "connections", List.of()
-                )
-        );
-
-        Map<String, Object> massParams = new HashMap<>();
-        massParams.put("shape", "circle");
-        massParams.put("void_ratio", 0.3);
-        massParams.put("assembly", assembly);
+    void promotesNestedAssemblyAndStripsConflictingComponents() {
+        Map<String, Object> massParams = getStringObjectMap();
 
         List<Component> input = List.of(
                 new Component(
@@ -81,16 +61,40 @@ class AssemblyPlanPromoterTest {
         AssemblyPlanPromoter.PromotionResult result = AssemblyPlanPromoter.promoteNestedAssembly(input);
 
         assertEquals(1, result.components().size());
-        Component assemblyComponent = result.components().get(0);
+        Component assemblyComponent = result.components().getFirst();
         assertEquals("ASSEMBLY", assemblyComponent.componentType());
         assertTrue(result.assemblyPrimarySlots().contains("tower_1"));
         assertTrue(assemblyComponent.params().containsKey("assembly"));
 
         Object nested = assemblyComponent.params().get("assembly");
-        assertTrue(nested instanceof Map);
+        assertInstanceOf(Map.class, nested);
         @SuppressWarnings("unchecked")
         Map<String, Object> nestedMap = (Map<String, Object>) nested;
         assertTrue(nestedMap.containsKey("graph"));
+    }
+
+    private static @NotNull Map<String, Object> getStringObjectMap() {
+        Map<String, Object> assembly = Map.of(
+                "entranceFacing", "SOUTH",
+                "graph", Map.of(
+                        "components", List.of(
+                                Map.of(
+                                        "id", "Core",
+                                        "type", "SHELL_BOX",
+                                        "at", Map.of("x", 0, "y", 0, "z", 0),
+                                        "w", 10, "d", 10, "h", 24,
+                                        "twistTurns", 0.75
+                                )
+                        ),
+                        "connections", List.of()
+                )
+        );
+
+        Map<String, Object> massParams = new HashMap<>();
+        massParams.put("shape", "circle");
+        massParams.put("void_ratio", 0.3);
+        massParams.put("assembly", assembly);
+        return massParams;
     }
 
     @Test
@@ -136,7 +140,7 @@ class AssemblyPlanPromoterTest {
         AssemblyPlanPromoter.PromotionResult result = AssemblyPlanPromoter.promoteNestedAssembly(input);
 
         assertEquals(1, result.components().size());
-        assertEquals("ASSEMBLY", result.components().get(0).componentType());
+        assertEquals("ASSEMBLY", result.components().getFirst().componentType());
         assertTrue(result.assemblyPrimarySlots().contains("tower_1"));
     }
 
@@ -180,7 +184,7 @@ class AssemblyPlanPromoterTest {
         List<Component> prepared = invokePrepareComponents(plan);
 
         assertEquals(1, prepared.size());
-        assertEquals("ASSEMBLY", prepared.get(0).componentType());
+        assertEquals("ASSEMBLY", prepared.getFirst().componentType());
         assertFalse(prepared.stream().anyMatch(c -> "MASS_MAIN".equals(c.componentType())));
         assertFalse(prepared.stream().anyMatch(c -> "FACADE_WINDOWS".equals(c.componentType())));
         assertFalse(prepared.stream().anyMatch(c -> "ROOF".equals(c.componentType())));
@@ -195,7 +199,7 @@ class AssemblyPlanPromoterTest {
                 boolean.class
         );
         m.setAccessible(true);
-        Object result = m.invoke(null, plan, Map.of("tower_1", plan.layout().slots().get(0)), false);
+        Object result = m.invoke(null, plan, Map.of("tower_1", plan.layout().slots().getFirst()), false);
         Method componentsGetter = result.getClass().getDeclaredMethod("components");
         return (List<Component>) componentsGetter.invoke(result);
     }
